fix display on firefox & older browsers

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -994,7 +994,7 @@ input.nav-btn {
 	padding: 0.3em;
 }
 .rules-drop {
-	display: inline-block;
+	display: flex;
 	user-select: none;
 	cursor: pointer;
 	vertical-align: bottom;
